@@ -1,5 +1,5 @@
 package Chemistry::Obj;
-$VERSION = "0.11";
+$VERSION = "0.20";
 # $Id$
 use 5.006001;
 
@@ -171,9 +171,15 @@ sub use {
 
 1;
 
+=head1 VERSION
+
+0.20
+
 =head1 SEE ALSO
 
-Chemistry::Atom, Chemistry::Bond, Chemistry::Mol
+L<Chemistry::Atom>, L<Chemistry::Bond>, L<Chemistry::Mol>
+
+The PerlMol website L<http://www.perlmol.org/>
 
 =head1 AUTHOR
 
@@ -181,7 +187,7 @@ Ivan Tubert E<lt>itub@cpan.orgE<gt>
 
 =head1 COPYRIGHT
 
-Copyright (c) 2003 Ivan Tubert. All rights reserved. This program is free
+Copyright (c) 2004 Ivan Tubert. All rights reserved. This program is free
 software; you can redistribute it and/or modify it under the same terms as
 Perl itself.
 
