@@ -1,9 +1,10 @@
-Chemistry/Mol version 0.11
+Chemistry/Mol version 0.20
 ==========================
 
 This toolkit includes basic objects and methods to describe molecules. It
 consists of several modules: Chemistry::Mol, Chemistry::Atom, Chemistry::Bond,
-and Chemistry::File.
+and Chemistry::File. These are the core modules of the PerlMol toolkit;
+see http://www.perlmol.org/.
 
 The core methods try not to commit to a particular convention, therefore fields
 such as the bond type have no intrinsic meaning. Bonds are defined as a list of
@@ -11,9 +12,15 @@ atoms (typically two) with an arbitrary type. Atoms are defined by a symbol and
 a Z, and may have 3D coordinates (2D and internal coming soon).
 
 CHANGES SINCE VERSION 0.11
-    - Use Scalar::Util::weaken to avoid strong cyclic references
-      and ensure garbage collection.
-    - New methods for Chemistry::Mol: delete_atom, delete_bond
+        - Use Scalar::Util::weaken to avoid strong cyclic references
+          and ensure garbage collection.
+        - New methods for Chemistry::Mol: delete_atom, delete_bond,
+          clone, combine, separate, distance
+        - New methods for Chemistry::Atom: angle, dihedral, angle_deg, 
+          dihedral_deg, delete
+        - New methods for Chemistry::Bond: delete
+        - Chemistry::Mol can export read_mol
+        - Chemistry::Atom can export distance, angle, dihedral
 
 INSTALLATION
 
@@ -28,11 +35,12 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
     - Math::VectorReal
-    - Scalar::Util (already included with perl 5.8)
+    - Scalar::Util (already a core module since perl 5.7.3)
+    - Test::More   (already a core module since perl 5.7.3)
 
-COPYRIGHT AND LICENCE
+COPYRIGHT AND LICENSE
 
-Copyright (C) 2003 Ivan Tubert <itub@cpan.org>
+Copyright (C) 2004 Ivan Tubert <itub@cpan.org>
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself. 
